<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:autofillHints=""
        android:focusable="true"
        android:hint="@string/enter_name"
        android:importantForAutofill="yes"
        android:inputType="textVisiblePassword|textNoSuggestions" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login_prompt"
        android:src="@drawable/red" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:text="@string/attempts_left"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textview"
        android:gravity="center"
        android:text="New Text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="107dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="233dp"
        android:onClick="createNew"
        android:text="@string/create_new_account" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="107dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="233dp"
        android:onClick="attemptLogin"
        android:text="@string/login" />

</RelativeLayout>