<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="107dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="32dp"
        android:background="@color/default_button_grey"
        android:onClick="sendPowerSignal"
        android:text="@string/powerbutton"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="222dp"
        android:layout_height="69dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/power_off_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="192dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/red"
        android:drawableTop="@drawable/red"
        android:onClick="updatePowerStatus"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/statusbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>